# quant-research-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: architecture.md
examples/: initialize_program.py
src/quant_research_pipeline/: __init__.py  artifact_registry.py  bootstrap.py  cli.py  evidence.py  evidence_review.py  legacy_import.py  manifest.py  migration.py  models.py  orchestrator.py  repository.py  stage_registry.py
tests/: test_research_pipeline_cli.py  test_research_pipeline_evidence.py  test_research_pipeline_evidence_review.py  test_research_pipeline_foundation.py  test_research_pipeline_manifest.py  test_research_pipeline_migration.py  test_research_pipeline_repository.py
